--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ script/test.py
 output/*
 !output/
 !output/best_model.pth
+output/graphs/*
+!output/
 !output/graphs/
+!output/graphs/epoch_040.png
 origin_script.py
 test.py
 temp/
